--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,6 @@ spring:
   jackson:
     serialization:
       write-dates-as-timestamps: false
+
+springdoc:
+  override-with-generic-response: false
